--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,11 @@ body {
   line-height: 1.6;
 }
 
-/* --- Sections --- */
 #services,
 #contact {
   background-color: #1e1e2f;
 }
+
 
 .section {
   padding: 60px 20px;
@@ -41,7 +41,6 @@ body {
   color: #ff007f;
 }
 
-/* --- Navbar --- */
 .navbar {
   position: sticky;
   top: 0;
@@ -59,7 +58,7 @@ body {
   display: flex;
   align-items: center;
   gap: 10px;
-  /* color: #4ea5ff;; */
+  
   color: #00f0ff;
   font-weight: bold;
   font-size: 1.4rem;
@@ -132,7 +131,7 @@ body {
   -webkit-background-clip: text;
   color: transparent;
   font-size: 3rem;
-  /* Adjusted gradient text size */
+  
   font-weight: bold;
 }
 
@@ -411,30 +410,17 @@ body {
 
 .about-heading .highlights {
   color:#ff007f;
-  /* border-bottom: 2px solid #4ea5ff; */
-}
-/* 
-.about-container {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  gap: 2rem;
-  flex-wrap: wrap;
+  
 }
 
-.about-image img {
-  max-width: 250px;
-  border: 3px solid #4ea5ff;
-  border-radius: 10px;
-} */
 
 .about-container {
   display: flex;
-  align-items: center; /* centers image vertically */
+  align-items: center;
   justify-content: center;
   gap: 2rem;
   flex-wrap: wrap;
-  min-height: 400px; /* adjust as needed to give it space */
+  min-height: 400px; 
 }
 
 .about-image img {
@@ -461,12 +447,12 @@ body {
 @media (max-width: 768px) {
   .about-container {
     flex-direction: column;
-    align-items: flex-start;  /* align to the left side */
+    align-items: flex-start;  
   }
   .about-text {
     padding: 0 1rem;
     text-align: left;
-    width: 100%; /* ensure it takes full width */
+    width: 100%; 
   }
   .about-image img {
     margin-bottom: 1rem;
@@ -475,7 +461,6 @@ body {
 }
 
 
-/* --- Button Group --- */
 .button-group {
   display: flex;
   justify-content: center;
@@ -597,7 +582,6 @@ body {
   }
 }
 
-/* Sidebar for mobile nav */
 .mobile-sidebar {
   position: fixed;
   top: 0;
@@ -642,7 +626,6 @@ body {
   color: #00f0ff;
 }
 
-/* Hide desktop nav on small screens */
 @media (max-width: 768px) {
   .desktop-menu {
     display: none;
