adjust about section

--- a/src/index.css
+++ b/src/index.css
@@ -572,8 +572,8 @@ body {
 
 
 .about-section {
-  padding: 4rem;
-  background-color: #1b1b29;
+  padding: 1rem;
+  background-color: #1c1c29;
   /* background-color:#008c99; */
   color:white;
 }
