--- a/src/index.css
+++ b/src/index.css
@@ -191,14 +191,14 @@ body {
 }
 
 .button {
-  background: linear-gradient(135deg, #00f0ff, #00c3ff);
+  background: linear-gradient(135deg, #24696e, #0cbaf0);
   color: black;
   padding: 14px 32px;
   border-radius: 40px;
   font-size: 1rem;
   font-weight: 800;
   border: none;
-  cursor: pointer;
+  /* cursor: pointer; */
   text-transform: uppercase;
   letter-spacing: 1px;
   transition: all 0.3s ease;
@@ -206,9 +206,9 @@ body {
 }
 
 .button:hover {
-  background: linear-gradient(135deg, #00c3ff, #00aaff);
+  background: linear-gradient(135deg, #4b9cb5, #386b85);
   transform: scale(1.05);
-  box-shadow: 0 0 25px rgba(0, 255, 255, 0.6);
+  box-shadow: 0 0 5px rgba(0, 255, 255, 0.6);
 }
 
 @keyframes fadeIn {
@@ -240,15 +240,18 @@ body {
   }
 
   .gradient-text {
-    font-size: 3rem;
+    font-size: 9rem;
+    
+
     line-height: 1.1;
     margin-bottom: 10px;
   }
 
   .typing-line {
-    font-size: 1.3rem;
+    font-size: 1.6rem;
     font-weight: 800;
-    margin-bottom: 18px;
+    margin-bottom: 30px;
+    margin-top: 30px;
   }
 
   .subtext {
