--- a/src/style/index.css
+++ b/src/style/index.css
@@ -10,11 +10,11 @@
 	--input-bg: rgba(0, 0, 0, 0.05);
 	--navbar-bg: rgba(0, 0, 0, 0.9);
 	--sidebar-bg: rgba(0, 0, 0, 0.95);
-	--gradient-bg: linear-gradient(to right, #1e1e2f, #2c2c50);
+	--bg-color: #111;
 }
 
 .dark {
-	--bg-color: var(--gradient-bg);
+	--bg-color: var(--bg-color);
 	--text-color: #fff;
 	--card-bg: rgba(255, 255, 255, 0.1);
 	--input-bg: rgba(255, 255, 255, 0.1);
@@ -29,7 +29,7 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: "Arial", sans-serif;
-	background: var(--gradient-bg);
+	background: var(--bg-color);
 	color: var(--text-color);
 	overflow-x: hidden;
 	font-size: 1.2rem;
